--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,45 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<script src="https://kit.fontawesome.com/413a8a726f.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/responsive.css">
 	<title>Document</title>
 </head>
+
 <body>
-	
+	<header class="header"><!-- Header -->
+		<div class="container">
+			<nav class="navbar justify-content-lg-between justify-content-center">
+				<div>
+					<a href="" class="navbar__item"><img src="img/header/logo.png" alt=""></a>
+					<a href="" class="navbar__item">Home.</a>
+					<a href="" class="navbar__item">About us.</a>
+					<a href="" class="navbar__item">Portfolio.</a>
+					<a href="" class="navbar__item">Blog.</a>
+					<a href="" class="navbar__item">Contact us.</a>
+				</div>
+				<div class="navbar__item dropdown">
+        			<a class="navbar__item dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          				EN
+        			</a>
+        			<div class="dropdown-menu col-12" aria-labelledby="navbarDropdownMenuLink">
+        				<a class="dropdown-item" href="#">English</a>
+       					<a class="dropdown-item" href="#">Russian</a>
+       					<a class="dropdown-item" href="#">German</a>
+       					<a class="dropdown-item" href="#">French</a>
+       				</div>
+   				</div>
+   				<button class="navbar__item contact__button rounded">Contact Us <i class="fas fa-long-arrow-alt-right"></i></button>
+			</nav>
+		</div>
+	</header><!-- end Header -->
+
+
+	<script src="https://kit.fontawesome.com/413a8a726f.js" crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </body>
 </html>
