--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,20 @@
    				</div>
    				<button class="navbar__item contact__button rounded">Contact Us <i class="fas fa-long-arrow-alt-right"></i></button>
 			</nav>
+
+			<div class="section-content row">
+				<h2 class="section-content__heading col-lg-7 col-12">The Spirit of Digital Agency.</h2>
+				<div class="offset-lg-5"></div>
+				<h3 class="section-content__subtitle col-lg-6 col-12">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla porttitor accumsan tincidunt.</h3>
+				<div class="offset-lg-6"></div>
+				<div class="buttons-block col-lg-6 col-8 row">
+					<a href="#" class="section__button button__highlighted">More about us</a>
+					<a href="#" class="section__button">Get in Touch.</a>
+				</div>
+				
+			</div>
+
+
 		</div>
 	</header><!-- end Header -->
 
