added section 1st, updated header and few things

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
 
 <body>
 	<header class="header"><!-- Header -->
+		<img src="img/header/illustration-header.png" alt="" class="header--background">
 		<div class="container">
 			<nav class="navbar justify-content-lg-between justify-content-center">
 				<div>
@@ -37,21 +38,48 @@
    				<button class="navbar__item contact__button rounded">Contact Us <i class="fas fa-long-arrow-alt-right"></i></button>
 			</nav>
 
-			<div class="section-content row">
-				<h2 class="section-content__heading col-lg-7 col-12">The Spirit of Digital Agency.</h2>
-				<div class="offset-lg-5"></div>
-				<h3 class="section-content__subtitle col-lg-6 col-12">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla porttitor accumsan tincidunt.</h3>
-				<div class="offset-lg-6"></div>
-				<div class="buttons-block col-lg-6 col-8 row">
-					<a href="#" class="section__button button__highlighted">More about us</a>
-					<a href="#" class="section__button">Get in Touch.</a>
+			<div class="row">
+				<div class="header-content section-content col-lg-6">
+					<h2 class="section-content__heading">The Spirit of Digital Agency.</h2>
+					<h3 class="section-content__subtitle">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla porttitor accumsan tincidunt.</h3>
+					<div class="buttons-block row">
+						<a href="#" class="section__button button__highlighted">More about us</a>
+						<a href="#" class="section__button">Get in Touch.</a>
+					</div>
 				</div>
-				
 			</div>
-
-
 		</div>
 	</header><!-- end Header -->
+
+
+	<main>
+		<section class="section"><!-- Section 1 services -->
+			<div class="container">
+				<div class="row">
+					<div class="section-content row col-lg-4">
+						<h2 class="section-content__title">Anything you need, we’ve got you covered</h2>
+						<div class="buttons-block">
+							<a href="#" class="section__button button__highlighted">Get in touch</a>
+						</div>
+					</div>
+					<div class="offset-lg-1"></div>
+					<div class="service-block col-lg-3 shadow rounded">
+						<img src="img/services/1.png" alt="" class="service-block__picture">
+						<h2 class="service-block__title">Web & Graphic Design</h2>
+						<div class="service-block__text">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla porttitor accumsan tincidunt.</div>
+					</div>
+					<div class="offset-lg-1"></div>
+					<div class="service-block col-lg-3 shadow rounded">
+						<img src="img/services/2.png" alt="" class="service-block__picture">
+						<h2 class="service-block__title">Web & App Development</h2>
+						<div class="service-block__text">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla porttitor accumsan tincidunt.</div>
+					</div>
+				</div>
+			</div>
+		</section><!-- end Section 1 services -->
+
+		
+	</main>
 
 
 	<script src="https://kit.fontawesome.com/413a8a726f.js" crossorigin="anonymous"></script>
