added section 2nd

--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,24 @@
 			</div>
 		</section><!-- end Section 1 services -->
 
+
+		<section class="section"><!-- Section 2 about -->
+			<div class="container">
+				<div class="row">
+					<img src="img/about/illustration-about.png" alt="" class="col-lg-6 col-12">
+					<div class="section-content col-lg-5 col-12">
+						<div class="section__information">Our company</div>
+						<h2 class="section-content__title">Some Fine Words About Us</h2>
+						<h3 class="section-content__text">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla porttitor accumsan tincidunt.Vestibulum ac diam sit amet.<br>Quam vehicula elementum amet est on dui. Nulla porttitor accumsan tincidunt.</h3>
+						<div class="buttons-block row">
+							<a href="#" class="section__button button--arrow"><i class="fas fa-long-arrow-alt-left"></i></a>
+							<a href="#" class="section__button button--arrow"><i class="fas fa-long-arrow-alt-right"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section><!-- end Section 2 about -->
+
 		
 	</main>
 
