--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
 
 
 	<main>
-		<section class="section"><!-- Section 1 services -->
+		<section class="section shape-left"><!-- Section 1 services -->
 			<div class="container">
 				<div class="row">
 					<div class="section-content row col-lg-4">
@@ -76,10 +76,12 @@
 					</div>
 				</div>
 			</div>
+
+			<img src="img/services/shape-left.png" alt="" class="background-shape-services">
 		</section><!-- end Section 1 services -->
 
 
-		<section class="section"><!-- Section 2 about -->
+		<section class="section shape-right"><!-- Section 2 about -->
 			<div class="container">
 				<div class="row">
 					<img src="img/about/illustration-about.png" alt="" class="col-lg-6 col-12">
@@ -94,12 +96,37 @@
 					</div>
 				</div>
 			</div>
+			<img src="img/about/shape-right.png" alt="" class="background-shape-about">
 		</section><!-- end Section 2 about -->
+
+
+		<section class="section portfolio"><!-- Section 3 portfolio -->
+			<div class="container">
+					<div class="section-content row justify-content-lg-between">
+						<h2 class="section-content__title col-lg-5">See some of our Creative work.</h2>
+						<div class="buttons-block row">
+							<a href="#" class="section__button button--arrow"><i class="fas fa-long-arrow-alt-left"></i></a>
+							<a href="#" class="section__button button--arrow"><i class="fas fa-long-arrow-alt-right"></i></a>
+						</div>
+					</div>
+
+					<div class="row">
+						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12">
+						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12">
+						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12">
+						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12">
+						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12">
+						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12">
+						<button class="portfolio__btn" id="showMore">See more of these.</button>
+					</div>
+					
+			</div>
+		</section><!-- end Section 3 portfolio -->
 
 		
 	</main>
 
-
+	<script src="js/main.js"></script>
 	<script src="https://kit.fontawesome.com/413a8a726f.js" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
