added section 4th

--- a/src/index.html
+++ b/src/index.html
@@ -117,16 +117,55 @@
 						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12">
 						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12">
 						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12">
-						<button class="portfolio__btn" id="showMore">See more of these.</button>
+						<button class="portfolio__item portfolio__btn mt-5" id="showMore">See more of these.</button>
 					</div>
-					
 			</div>
 		</section><!-- end Section 3 portfolio -->
+
+
+		<section class="section"><!-- Section 4 blog -->
+			<div class="container">
+				<div class="row justify-content-lg-between">
+					<div class="section-content">
+						<div class="section__information">Blog stories</div>
+						<div class="section-content__title">Check Our News</div>
+					</div>
+					<div class="buttons-block row">
+						<a href="#" class="section__button button--arrow"><i class="fas fa-long-arrow-alt-left"></i></a>
+						<a href="#" class="section__button button--arrow"><i class="fas fa-long-arrow-alt-right"></i></a>
+					</div>
+				</div>
+
+				<div class="row justify-content-lg-between">
+					<div class="blog-item shadow col-lg col-12">
+						<h3 class="blog__title">New Adventure</h3>
+						<div class="blog__date">17 March 2019</div>
+						<p class="blog__text">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla porttitor accumsan tincidunt.</p>
+						<a href="#" class="section__button button--arrow"><i class="fas fa-long-arrow-alt-right"></i></a>
+					</div>
+
+					<div class="blog-item shadow col-lg col-12">
+						<h3 class="blog__title">New Adventure</h3>
+						<div class="blog__date">17 March 2019</div>
+						<p class="blog__text">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla porttitor accumsan tincidunt.</p>
+						<a href="#" class="section__button button--arrow"><i class="fas fa-long-arrow-alt-right"></i></a>
+					</div>
+
+					<div class="blog-item shadow col-lg col-12">
+						<h3 class="blog__title">New Adventure</h3>
+						<div class="blog__date">17 March 2019</div>
+						<p class="blog__text">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla porttitor accumsan tincidunt.</p>
+						<a href="#" class="section__button button--arrow"><i class="fas fa-long-arrow-alt-right"></i></a>
+					</div>
+				</div>
+					
+				</div>
+			</div>
+		</section><!-- end Section 4 blog -->
 
 		
 	</main>
 
-	<script src="js/main.js"></script>
 	<script src="https://kit.fontawesome.com/413a8a726f.js" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
