--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 		</section><!-- end Section 3 portfolio -->
 
 
-		<section class="section"><!-- Section 4 blog -->
+		<section class="section blog"><!-- Section 4 blog -->
 			<div class="container">
 				<div class="row justify-content-lg-between">
 					<div class="section-content">
@@ -162,6 +162,27 @@
 				</div>
 			</div>
 		</section><!-- end Section 4 blog -->
+
+
+		<section class="section"><!-- Section 5 contact -->
+			<div class="container">
+				<div class="section-content">
+					<div class="section__information">Contact us</div>
+					<div class="section-content__title">Get in Touch</div>
+				</div>
+				<div class="input-block row">
+					<div class="input__item col-lg-6">
+						<input type="email" class="input-block__email col-12" placeholder="Your email">
+					</div>
+					<div class="input__item col-lg-6">
+						<input type="text" class="input-block__text col-12" placeholder="Subject">
+					</div>
+					
+					
+					<input type="text" class="input__item input-block__text col-lg-12" placeholder="Message here..." value="Message here...">
+				</div>
+			</div>
+		</section><!-- end Section 5 contact -->
 
 		
 	</main>
