--- a/index.html
+++ b/index.html
@@ -194,9 +194,29 @@
 
 			</div>
 		</section><!-- end Section 5 contact -->
-
-		
 	</main>
+
+	<footer class="section section--blue footer"><!-- Footer -->
+		<div class="container">
+			<div class="footer-info">
+				<div class="footer-info__title">Doob</div>
+				<div class="footer-info__subtitle">Creativity above</div>
+				<div class="link-block">
+					<a href="" class="footer-link__item">Home</a>
+					<a href="" class="footer-link__item">About us.</a>
+					<a href="" class="footer-link__item">Portfolio.</a>
+					<a href="" class="footer-link__item">Blog.</a>
+					<a href="" class="footer-link__item">Contact us.</a>
+				</div>
+				<div class="footer-info__copyright">© 2019 - Doob,All Right Reserved</div>
+				<div class="link-block">
+					<a href="" class="footer-link__item link--social"><i class="fab fa-facebook-f"></i></a>
+					<a href="" class="footer-link__item link--social"><i class="fab fa-twitter"></i></a>
+					<a href="" class="footer-link__item link--social "><i class="fab fa-dribbble"></i></a>
+				</div>
+			</div>
+		</div>
+	</footer><!-- end Footer -->
 
 	<script src="https://kit.fontawesome.com/413a8a726f.js" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
