changed input tag to textarea to make it multiline

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 						<input type="text" class="input__item input-block__text col-12" placeholder="Subject">
 					</div>
 					<div class="col-12">
-						<input type="text" class="input__item input__item--large input-block__text col-12" placeholder="Message here..." value="Message here...">
+						<textarea class="input__item input__item--large input-block__text col-12" placeholder="Message here..." value="Message here..."></textarea>
 					</div>
 					<div class="buttons-block m-auto">
 						<input type="submit" name="" class="section__button button__highlighted" value="Send Message">
