--- a/index.html
+++ b/index.html
@@ -164,8 +164,6 @@
 						</div>
 					</div>
 				</div>
-					
-				</div>
 			</div>
 		</section><!-- end Section 4 blog -->
 
@@ -173,7 +171,7 @@
 		<section class="section"><!-- Section 5 contact -->
 			<div class="container">
 				<div class="section-content">
-					<div class="section__information">Contact us</div>
+					<h2 class="section__information">Contact us</h2>
 					<div class="section-content__title">Get in Touch</div>
 				</div>
 				<div class="input-block row">
@@ -184,10 +182,10 @@
 						<input type="text" class="input__item input-block__text col-12" placeholder="Subject">
 					</div>
 					<div class="col-12">
-						<textarea class="input__item input__item--large input-block__text col-12" placeholder="Message here..." value="Message here..."></textarea>
+						<textarea class="input__item input__item--large input-block__text col-12" placeholder="Message here..."></textarea>
 					</div>
 					<div class="buttons-block m-auto">
-						<input type="submit" name="" class="section__button button__highlighted" value="Send Message">
+						<input type="submit" class="section__button button__highlighted" value="Send Message">
 					</div>
 				</div>
 				
