added script for "show more" button in portfolio section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/responsive.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="js/main.js"></script>
 	<title>Document</title>
 </head>
 
@@ -117,7 +119,10 @@
 						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12">
 						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12">
 						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12">
-						<button class="portfolio__item portfolio__btn mt-5" id="showMore">See more of these.</button>
+						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12 portfolio--hidden">
+						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12 portfolio--hidden">
+						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12 portfolio--hidden">
+						<button class="portfolio__item portfolio__btn mt-5">See more of these.</button>
 					</div>
 			</div>
 		</section><!-- end Section 3 portfolio -->
@@ -217,8 +222,7 @@
 	</footer><!-- end Footer -->
 
 	<script src="https://kit.fontawesome.com/413a8a726f.js" crossorigin="anonymous"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </body>
 </html>
