removed useless bootstrap classes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +15,8 @@
 </head>
 
 <body>
-	<header class="header"><!-- Header -->
+	<header class="header">
+		<!-- Header -->
 		<img src="img/header/illustration-header.png" alt="" class="header--background">
 		<div class="container">
 			<nav class="navbar justify-content-lg-between justify-content-center">
@@ -27,23 +29,26 @@
 					<a href="" class="navbar__item">Contact us.</a>
 				</div>
 				<div class="navbar__item dropdown">
-        			<a class="navbar__item dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          				EN
-        			</a>
-        			<div class="dropdown-menu col-12" aria-labelledby="navbarDropdownMenuLink">
-        				<a class="dropdown-item" href="#">English</a>
-       					<a class="dropdown-item" href="#">Russian</a>
-       					<a class="dropdown-item" href="#">German</a>
-       					<a class="dropdown-item" href="#">French</a>
-       				</div>
-   				</div>
-   				<button class="navbar__item contact__button rounded">Contact Us <i class="fas fa-long-arrow-alt-right"></i></button>
+					<a class="navbar__item dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+						aria-haspopup="true" aria-expanded="false">
+						EN
+					</a>
+					<div class="dropdown-menu col-12" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item" href="#">English</a>
+						<a class="dropdown-item" href="#">Russian</a>
+						<a class="dropdown-item" href="#">German</a>
+						<a class="dropdown-item" href="#">French</a>
+					</div>
+				</div>
+				<button class="navbar__item contact__button rounded">Contact Us <i
+						class="fas fa-long-arrow-alt-right"></i></button>
 			</nav>
 
 			<div class="row">
 				<div class="header-content section-content col-lg-6">
 					<h2 class="section-content__heading">The Spirit of Digital Agency.</h2>
-					<h3 class="section-content__subtitle">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla porttitor accumsan tincidunt.</h3>
+					<h3 class="section-content__subtitle">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui.
+						Nulla porttitor accumsan tincidunt.</h3>
 					<div class="buttons-block row">
 						<a href="#" class="section__button button__highlighted">More about us</a>
 						<a href="#" class="section__button">Get in Touch.</a>
@@ -55,7 +60,8 @@
 
 
 	<main>
-		<section class="section shape-left"><!-- Section 1 services -->
+		<section class="section shape-left">
+			<!-- Section 1 services -->
 			<div class="container">
 				<div class="row">
 					<div class="section-content row col-lg-4">
@@ -68,13 +74,15 @@
 					<div class="service-block col-lg-3 shadow rounded">
 						<img src="img/services/1.png" alt="" class="service-block__picture">
 						<h2 class="service-block__title">Web & Graphic Design</h2>
-						<div class="service-block__text">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla porttitor accumsan tincidunt.</div>
+						<div class="service-block__text">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla
+							porttitor accumsan tincidunt.</div>
 					</div>
 					<div class="offset-lg-1"></div>
 					<div class="service-block col-lg-3 shadow rounded">
 						<img src="img/services/2.png" alt="" class="service-block__picture">
 						<h2 class="service-block__title">Web & App Development</h2>
-						<div class="service-block__text">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla porttitor accumsan tincidunt.</div>
+						<div class="service-block__text">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla
+							porttitor accumsan tincidunt.</div>
 					</div>
 				</div>
 			</div>
@@ -83,14 +91,17 @@
 		</section><!-- end Section 1 services -->
 
 
-		<section class="section shape-right"><!-- Section 2 about -->
+		<section class="section shape-right">
+			<!-- Section 2 about -->
 			<div class="container">
 				<div class="row">
-					<img src="img/about/illustration-about.png" alt="" class="col-lg-6 col-12">
-					<div class="section-content col-lg-5 col-12">
+					<img src="img/about/illustration-about.png" alt="" class="col-lg-6">
+					<div class="section-content col-lg-5">
 						<div class="section__information">Our company</div>
 						<h2 class="section-content__title">Some Fine Words About Us</h2>
-						<h3 class="section-content__text">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla porttitor accumsan tincidunt.Vestibulum ac diam sit amet.<br>Quam vehicula elementum amet est on dui. Nulla porttitor accumsan tincidunt.</h3>
+						<h3 class="section-content__text">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla
+							porttitor accumsan tincidunt.Vestibulum ac diam sit amet.<br>Quam vehicula elementum amet est on dui.
+							Nulla porttitor accumsan tincidunt.</h3>
 						<div class="buttons-block row">
 							<a href="#" class="section__button button--arrow"><i class="fas fa-long-arrow-alt-left"></i></a>
 							<a href="#" class="section__button button--arrow"><i class="fas fa-long-arrow-alt-right"></i></a>
@@ -102,33 +113,35 @@
 		</section><!-- end Section 2 about -->
 
 
-		<section class="section portfolio"><!-- Section 3 portfolio -->
+		<section class="section portfolio">
+			<!-- Section 3 portfolio -->
 			<div class="container">
-					<div class="section-content row justify-content-lg-between">
-						<h2 class="section-content__title col-lg-5">See some of our Creative work.</h2>
-						<div class="buttons-block row">
-							<a href="#" class="section__button button--arrow"><i class="fas fa-long-arrow-alt-left"></i></a>
-							<a href="#" class="section__button button--arrow"><i class="fas fa-long-arrow-alt-right"></i></a>
-						</div>
+				<div class="section-content row justify-content-lg-between">
+					<h2 class="section-content__title col-lg-5">See some of our Creative work.</h2>
+					<div class="buttons-block row">
+						<a href="#" class="section__button button--arrow"><i class="fas fa-long-arrow-alt-left"></i></a>
+						<a href="#" class="section__button button--arrow"><i class="fas fa-long-arrow-alt-right"></i></a>
 					</div>
+				</div>
 
-					<div class="row">
-						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12">
-						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12">
-						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12">
-						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12">
-						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12">
-						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12">
-						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12 portfolio--hidden">
-						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12 portfolio--hidden">
-						<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 col-12 portfolio--hidden">
-						<button class="portfolio__item portfolio__btn mt-5">See more of these.</button>
-					</div>
+				<div class="row">
+					<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6">
+					<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6">
+					<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6">
+					<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6">
+					<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6">
+					<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6">
+					<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 portfolio--hidden">
+					<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 portfolio--hidden">
+					<img src="https://placehold.it/370x280" alt="" class="portfolio__item col-lg-4 col-md-6 portfolio--hidden">
+					<button class="portfolio__item portfolio__btn mt-5">See more of these.</button>
+				</div>
 			</div>
 		</section><!-- end Section 3 portfolio -->
 
 
-		<section class="section blog"><!-- Section 4 blog -->
+		<section class="section blog">
+			<!-- Section 4 blog -->
 			<div class="container">
 				<div class="row justify-content-lg-between">
 					<div class="section-content">
@@ -142,29 +155,32 @@
 				</div>
 
 				<div class="row">
-					<div class="col-lg-4 col-12">
+					<div class="col-lg-4">
 						<div class="blog-item shadow col-12">
 							<h3 class="blog__title">New Adventure</h3>
 							<div class="blog__date">17 March 2019</div>
-							<p class="blog__text">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla porttitor accumsan tincidunt.</p>
+							<p class="blog__text">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla porttitor
+								accumsan tincidunt.</p>
 							<a href="#" class="section__button button--arrow"><i class="fas fa-long-arrow-alt-right"></i></a>
 						</div>
 					</div>
 
-					<div class="col-lg-4 col-12">
+					<div class="col-lg-4">
 						<div class="blog-item shadow col-12">
 							<h3 class="blog__title">New Adventure</h3>
 							<div class="blog__date">17 March 2019</div>
-							<p class="blog__text">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla porttitor accumsan tincidunt.</p>
+							<p class="blog__text">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla porttitor
+								accumsan tincidunt.</p>
 							<a href="#" class="section__button button--arrow"><i class="fas fa-long-arrow-alt-right"></i></a>
 						</div>
 					</div>
 
-					<div class="col-lg-4 col-12">
+					<div class="col-lg-4">
 						<div class="blog-item shadow col-12">
 							<h3 class="blog__title">New Adventure</h3>
 							<div class="blog__date">17 March 2019</div>
-							<p class="blog__text">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla porttitor accumsan tincidunt.</p>
+							<p class="blog__text">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla porttitor
+								accumsan tincidunt.</p>
 							<a href="#" class="section__button button--arrow"><i class="fas fa-long-arrow-alt-right"></i></a>
 						</div>
 					</div>
@@ -173,33 +189,36 @@
 		</section><!-- end Section 4 blog -->
 
 
-		<section class="section"><!-- Section 5 contact -->
+		<section class="section">
+			<!-- Section 5 contact -->
 			<div class="container">
 				<div class="section-content">
 					<h2 class="section__information">Contact us</h2>
 					<div class="section-content__title">Get in Touch</div>
 				</div>
 				<div class="input-block row">
-					<div class="col-lg-6 col-12">
+					<div class="col-lg-6">
 						<input type="email" class="input__item input-block__email col-12" placeholder="Your email">
 					</div>
-					<div class="col-lg-6 col-12">
+					<div class="col-lg-6">
 						<input type="text" class="input__item input-block__text col-12" placeholder="Subject">
 					</div>
 					<div class="col-12">
-						<textarea class="input__item input__item--large input-block__text col-12" placeholder="Message here..."></textarea>
+						<textarea class="input__item input__item--large input-block__text col-12"
+							placeholder="Message here..."></textarea>
 					</div>
 					<div class="buttons-block m-auto">
 						<input type="submit" class="section__button button__highlighted" value="Send Message">
 					</div>
 				</div>
-				
+
 
 			</div>
 		</section><!-- end Section 5 contact -->
 	</main>
 
-	<footer class="section section--blue footer"><!-- Footer -->
+	<footer class="section section--blue footer">
+		<!-- Footer -->
 		<div class="container">
 			<div class="footer-info">
 				<div class="footer-info__title">Doob</div>
@@ -225,4 +244,5 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </body>
+
 </html>
